Add Produto guardando variaveis em um arquivo

--- a/app/src/main/res/layout/layout_add_produto.xml
+++ b/app/src/main/res/layout/layout_add_produto.xml
@@ -18,7 +18,7 @@
         app:layout_constraintVertical_bias="0.291">
 
         <ImageView
-            android:id="@+id/imageView9"
+            android:id="@+id/imgAddProduto"
             android:layout_width="115dp"
             android:layout_height="220dp"
             android:accessibilityLiveRegion="assertive"
@@ -88,7 +88,7 @@
             app:boxStrokeColor="@color/verde_fundo_categoria"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView9"
+            app:layout_constraintStart_toEndOf="@+id/imgAddProduto"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
             app:layout_constraintVertical_bias="0.32">
 
@@ -118,7 +118,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/imageView9"
+            app:layout_constraintStart_toEndOf="@+id/imgAddProduto"
             app:layout_constraintTop_toBottomOf="@+id/inputPreco"
             app:layout_constraintVertical_bias="0.813">
 
@@ -147,7 +147,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.615"
-            app:layout_constraintStart_toEndOf="@+id/imageView9"
+            app:layout_constraintStart_toEndOf="@+id/imgAddProduto"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.019">
 
