--- a/app/src/main/res/layout/activity_adicionar_produtos.xml
+++ b/app/src/main/res/layout/activity_adicionar_produtos.xml
@@ -24,63 +24,66 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/constraintLayout2"
-        android:layout_width="413dp"
-        android:layout_height="346dp"
+        android:layout_width="0dp"
+        android:layout_height="430dp"
         android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.29">
+        app:layout_constraintVertical_bias="0.255">
 
         <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="112dp"
-            android:layout_height="213dp"
+            android:id="@+id/imgAddProduto"
+            android:layout_width="264dp"
+            android:layout_height="191dp"
             android:accessibilityLiveRegion="assertive"
             android:adjustViewBounds="false"
-            android:backgroundTintMode="add"
+            android:backgroundTint="@color/verde_fundo_categoria"
             android:contextClickable="false"
             android:cropToPadding="false"
+
+
+            android:onClick="CarregarImage"
             android:radius="4dp"
             android:scaleType="centerInside"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.496"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0"
+            app:srcCompat="@drawable/bebidas"
+            tools:srcCompat="@drawable/borda_quatro_pontas_arrendondadas_verde_escuro" />
 
-
+        <Spinner
+            android:id="@+id/spinnerAddProduto"
+            android:layout_width="117dp"
+            android:layout_height="54dp"
+            android:background="@drawable/borda_quatro_pontas_arrendondadas_verde_escuro"
+            android:dropDownSelector="@color/verde_fundo_categoria"
+            android:entries="@array/filtro_categoria_add_produto"
+            android:popupBackground="@color/verde_fundo_categoria"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.079"
-            app:srcCompat="@drawable/bebidas" />
-
-        <Spinner
-            android:id="@+id/spinner2"
-            android:layout_width="90dp"
-            android:layout_height="44dp"
-            android:background="@drawable/borda_quatro_pontas_arrendondadas_verde_escuro"
-            android:dropDownSelector="@color/verde_fundo_categoria"
-            android:popupBackground="@color/verde_fundo_categoria"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.39"
-            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
-            app:layout_constraintVertical_bias="0.06" />
+            app:layout_constraintVertical_bias="0.0" />
 
         <LinearLayout
             android:id="@+id/linearLayout4"
-            android:layout_width="169dp"
-            android:layout_height="53dp"
+            android:layout_width="143dp"
+            android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.737"
-            app:layout_constraintStart_toEndOf="@+id/spinner2"
+            app:layout_constraintHorizontal_bias="0.067"
+            app:layout_constraintStart_toEndOf="@+id/spinnerAddProduto"
             app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
-            app:layout_constraintVertical_bias="0.063">
+            app:layout_constraintVertical_bias="0.0">
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/inputQnt"
@@ -94,6 +97,7 @@
                     android:layout_height="wrap_content"
                     android:background="@drawable/input_claro_arrebondadado_stroke"
                     android:hint="Quantidade"
+                    android:inputType="numberDecimal"
                     android:textColor="@color/verde_fundo_categoria"
                     android:textColorHighlight="@color/verde_fundo_categoria"
                     android:textColorHint="@color/verde_fundo_categoria"
@@ -103,26 +107,27 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputPreco"
-            android:layout_width="281dp"
-            android:layout_height="72dp"
-            android:layout_marginBottom="84dp"
+            android:layout_width="124dp"
+            android:layout_height="wrap_content"
             android:padding="5dp"
             android:textColorHint="@color/verde_fundo_categoria"
             app:boxStrokeColor="@color/verde_fundo_categoria"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/imageView9"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
-            app:layout_constraintVertical_bias="0.32">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toEndOf="@+id/linearLayout4"
+            app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
+            app:layout_constraintVertical_bias="0.0">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textInputPreco"
-                android:layout_width="275dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/input_claro_arrebondadado_stroke"
                 android:drawableTint="@color/verde_fundo_categoria"
                 android:foregroundTint="@color/verde_fundo_categoria"
                 android:hint="Preço"
+                android:inputType="numberDecimal"
                 android:shadowColor="@color/verde_fundo_categoria"
                 android:textColorHighlight="@color/verde_fundo_categoria"
                 android:textColorHint="@color/verde_fundo_categoria"
@@ -132,9 +137,8 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputIngredientes"
-            android:layout_width="0dp"
-            android:layout_height="107dp"
-            android:layout_marginTop="3dp"
+            android:layout_width="403dp"
+            android:layout_height="102dp"
             android:padding="5dp"
             android:textColorHint="@color/verde_fundo_categoria"
             app:boxStrokeColor="@color/verde_fundo_categoria"
@@ -142,13 +146,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/inputPreco"
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
             app:layout_constraintVertical_bias="0.609">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textInputDingredientes"
                 android:layout_width="match_parent"
-                android:layout_height="95dp"
+                android:layout_height="wrap_content"
                 android:background="@drawable/input_claro_arrebondadado_stroke"
                 android:drawableTint="@color/verde_fundo_categoria"
                 android:foregroundTint="@color/verde_fundo_categoria"
@@ -162,22 +166,22 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/inputNomeProduto"
-            android:layout_width="281dp"
-            android:layout_height="52dp"
+            android:layout_width="0dp"
+            android:layout_height="56dp"
             android:padding="5dp"
             android:textColorHint="@color/verde_fundo_categoria"
             app:boxStrokeColor="@color/verde_fundo_categoria"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.615"
-            app:layout_constraintStart_toEndOf="@+id/imageView9"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.019">
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imgAddProduto"
+            app:layout_constraintVertical_bias="0.021">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textInputNomeProduto"
-                android:layout_width="272dp"
-                android:layout_height="45dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:background="@drawable/input_claro_arrebondadado_stroke"
                 android:drawableTint="@color/verde_fundo_categoria"
                 android:foregroundTint="@color/verde_fundo_categoria"
@@ -191,57 +195,15 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <LinearLayout
-        android:id="@+id/linearLayout"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="5dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
-        app:layout_constraintVertical_bias="0.0">
-
-        <Button
-            android:id="@+id/bntAdd"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:insetLeft="4dp"
-            android:insetTop="4dp"
-            android:insetRight="4dp"
-            android:insetBottom="4dp"
-            android:onClick="adicionarNovoProduto"
-            android:textAlignment="center"
-            android:textStyle="bold"
-            app:cornerRadius="50dp"
-            app:icon="@android:drawable/ic_input_add"
-            app:iconPadding="0dp"
-            tools:text="adicionar produto" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:drawablePadding="5dp"
-            android:text="Adicionar novo Produtos"
-            android:textAlignment="center"
-            android:textColor="@color/verde_fundo_categoria"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
     <Button
-        android:id="@+id/button4"
+        android:id="@+id/btn_finalizar"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:onClick="finalizarCadastroProduto"
         android:text="Finalizar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
