--- a/app/src/main/res/layout/activity_adicionar_produtos.xml
+++ b/app/src/main/res/layout/activity_adicionar_produtos.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/bege"
     tools:context=".Activity_Adicionar_Produtos">
 
     <TextView
@@ -76,6 +77,7 @@
             android:id="@+id/linearLayout4"
             android:layout_width="143dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:orientation="horizontal"
             android:padding="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -94,7 +96,7 @@
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/textInputQnt"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:background="@drawable/input_claro_arrebondadado_stroke"
                     android:hint="Quantidade"
                     android:inputType="numberDecimal"
@@ -109,12 +111,12 @@
             android:id="@+id/inputPreco"
             android:layout_width="124dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:padding="5dp"
             android:textColorHint="@color/verde_fundo_categoria"
             app:boxStrokeColor="@color/verde_fundo_categoria"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/linearLayout4"
             app:layout_constraintTop_toBottomOf="@+id/inputNomeProduto"
             app:layout_constraintVertical_bias="0.0">
@@ -132,7 +134,7 @@
                 android:textColorHighlight="@color/verde_fundo_categoria"
                 android:textColorHint="@color/verde_fundo_categoria"
                 android:textColorLink="@color/verde_fundo_categoria"
-                android:textSize="12sp" />
+                android:textSize="16sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -152,7 +154,7 @@
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/textInputDingredientes"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="91dp"
                 android:background="@drawable/input_claro_arrebondadado_stroke"
                 android:drawableTint="@color/verde_fundo_categoria"
                 android:foregroundTint="@color/verde_fundo_categoria"
