--- a/app/src/main/res/layout/modelo_estoque.xml
+++ b/app/src/main/res/layout/modelo_estoque.xml
@@ -10,7 +10,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="300dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -53,10 +53,11 @@
                 android:id="@+id/txtPreco"
                 android:layout_width="225dp"
                 android:layout_height="wrap_content"
+                android:layout_marginBottom="96dp"
                 android:padding="5dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.916"
                 app:layout_constraintStart_toEndOf="@+id/imgProduto">
 
                 <com.google.android.material.textfield.TextInputEditText
@@ -84,6 +85,24 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
             </com.google.android.material.textfield.TextInputLayout>
+
+            <CheckBox
+                android:id="@+id/cBPromocao"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Promoção"
+                tools:layout_editor_absoluteX="166dp"
+                tools:layout_editor_absoluteY="205dp" />
+
+            <TextView
+                android:id="@+id/btnExcluir"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="EXCLUIR"
+                android:textColor="#0F5929"
+                android:textStyle="bold"
+                tools:layout_editor_absoluteX="166dp"
+                tools:layout_editor_absoluteY="253dp" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
