--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -73,12 +73,12 @@
             app:layout_constraintVertical_bias="0.219" />
 
         <Button
-            android:id="@+id/Perfil"
+            android:id="@+id/PerfilSair"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:backgroundTint="@color/verde_fundo_categoria"
-            android:onClick="finalizarPedido"
+            android:onClick="SairdoPerfil"
             android:text="Sair do Perfil"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
