--- a/app/src/main/res/layout/teste.xml
+++ b/app/src/main/res/layout/teste.xml
@@ -16,19 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_weight="3">
-
-
-        <ImageView
-            android:id="@+id/home"
-            android:layout_width="83dp"
-            android:layout_height="72dp"
-            android:clickable="true"
-            android:onClick="log"
-            app:srcCompat="@drawable/ic_home"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="71dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintVertical_weight="3"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
@@ -82,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:onClick="cardapio"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.171"
@@ -95,6 +84,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:onClick="carrinho"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
@@ -108,6 +98,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:clickable="true"
+            android:onClick="usuario"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.807"
