Pedidos Para retirar Finalizados

--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/bege"
     android:orientation="vertical"
-    tools:context=".LoadingActivity">
+    tools:context=".activities.LoadingActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
