--- a/app/src/main/res/layout/activity_adicionar_saldo2.xml
+++ b/app/src/main/res/layout/activity_adicionar_saldo2.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AdicionarSaldo2">
+    tools:context=".activities.AdicionarSaldo2">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/layoutBarraSuperior"
