--- a/app/src/main/res/layout/activity_comprovante_pedido.xml
+++ b/app/src/main/res/layout/activity_comprovante_pedido.xml
@@ -8,7 +8,7 @@
     android:paddingLeft="5dp"
     android:paddingRight="5dp"
     android:paddingBottom="5dp"
-    tools:context=".ComprovantePedido">
+    tools:context=".activities.ComprovantePedido">
 
     <TextView
         android:id="@+id/tituloPedido"
