--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/bege"
-    tools:context=".LoadingActivity"
+    tools:context=".activities.LoadingActivity"
     android:gravity="center"
     >
 
