--- a/app/src/main/res/layout/fragment_pedidos_para_retirar.xml
+++ b/app/src/main/res/layout/fragment_pedidos_para_retirar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PedidosParaRetirar">
+    tools:context=".fragments.PedidosParaRetirar">
 
     <!-- TODO: Update blank fragment layout -->
     <androidx.constraintlayout.widget.ConstraintLayout
