--- a/app/src/main/res/layout/activity_pagina_inicial.xml
+++ b/app/src/main/res/layout/activity_pagina_inicial.xml
@@ -16,19 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_weight="3">
-
-
-        <ImageView
-            android:id="@+id/home"
-            android:layout_width="83dp"
-            android:layout_height="72dp"
-            android:clickable="true"
-            android:onClick="log"
-            app:srcCompat="@drawable/ic_home"
-            tools:layout_editor_absoluteX="30dp"
-            tools:layout_editor_absoluteY="71dp" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+        app:layout_constraintVertical_weight="3"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycleView"
@@ -78,8 +66,8 @@
 
         <ImageView
             android:id="@+id/cardapio"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:clickable="true"
             android:onClick="cardapio"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -92,8 +80,8 @@
 
         <ImageView
             android:id="@+id/garcom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:clickable="true"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -105,8 +93,8 @@
 
         <ImageView
             android:id="@+id/usuario"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
             android:clickable="true"
             android:onClick="usuario"
             app:layout_constraintBottom_toBottomOf="parent"
