--- a/app/src/main/res/layout/modelo_categoria.xml
+++ b/app/src/main/res/layout/modelo_categoria.xml
@@ -36,6 +36,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@drawable/borda_inferior_arredondada"
+            android:backgroundTint="#94E986"
             android:elevation="@dimen/cardview_compat_inset_shadow">
 
             <TextView
@@ -44,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/itim"
                 android:text="Descrição da Categoria"
                 android:textAlignment="center"
                 android:textColor="#000000"
